dev/core.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    component: core
  annotations:
    argocd.argoproj.io/sync-wave: "0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: todo
  labels:
    component: core
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: mosheyagami/todoapp:v1.0.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: todo
  labels:
    component: core
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: todo
  ports:
    - port: 80
      targetPort: 80
