dev/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: mosheyagami/todoapp:v1.0.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: todo
spec:
  selector:
    app: todo
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  namespace: todo
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  tls:
    - hosts:
        - todo.khumo.cloud
      secretName: todo-certificate-secret
  rules:
    - host: todo.khumo.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo
                port:
                  number: 80
