dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  namespace: todo
  labels:
    component: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    argocd.argoproj.io/sync-wave: "1"
spec:
  tls:
    - hosts:
        - todo.khumo.cloud
      secretName: todo-certificate-secret
  rules:
    - host: todo.khumo.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo
                port:
                  number: 80
